fix adaptive issues, add edit popup js logic

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       </div>
       <button class="profile__add"></button>
     </section>
+
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__close"></button>
+        <form class="popup__edit">
+          <h2 class="popup__heading">Редактировать профиль</h2>
+          <input class="popup__input" id="formName" placeholder="" type="text">
+          <input class="popup__input" id="formDescription" placeholder="" type="text">
+          <button class="popup__save" type="button">Сохранить</button>
+        </form>
+      </div>
+    </div>
     
     <section class="elements">
       <div class="elements__card">
@@ -59,5 +71,6 @@
   <footer class="footer">
     <p class="footer__caption">© 2022 Mesto Russia</p>
   </footer>
+  <script src="./js/index.js"></script>
 </body>
 </html>
