small corrections to pass tests

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <button class="profile__edit"></button>
-        <p class="profile__description">Исследователь океана</p>        
+        <p class="profile__description">Исследователь океана</p>
       </div>
       <button class="profile__add"></button>
     </section>
@@ -36,32 +36,32 @@
     
     <section class="elements">
       <div class="elements__card">
-        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус"></img>
+        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус">
         <p class="elements__caption">Гора Эльбрус</p>
         <button class="elements__like"></button>
       </div>
       <div class="elements__card">
-        <img class="elements__image" src="./images/dombay.jpg" alt="домбай"></img>
+        <img class="elements__image" src="./images/dombay.jpg" alt="домбай">
         <p class="elements__caption">Домбай</p>
         <button class="elements__like"></button>
       </div>
       <div class="elements__card">
-        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск"></img>
+        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск">
         <p class="elements__caption">Карачаевск</p>
         <button class="elements__like"></button>
       </div>
       <div class="elements__card">
-        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск"></img>
+        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск">
         <p class="elements__caption">Карачаево-Черкессия</p>
         <button class="elements__like"></button>
       </div>
       <div class="elements__card">
-        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус"></img>
+        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус">
         <p class="elements__caption">Гора Эльбрус</p>
         <button class="elements__like"></button>
       </div>
       <div class="elements__card">
-        <img class="elements__image" src="./images/dombay.jpg" alt="домбай"></img>
+        <img class="elements__image" src="./images/dombay.jpg" alt="домбай">
         <p class="elements__caption">Домбай</p>
         <button class="elements__like"></button>
       </div>
