--- a/index.html
+++ b/index.html
@@ -8,69 +8,81 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__image" src="./images/logo.png" alt="лого">
+    <img class="header__image" src="./images/logo.svg" alt="лого">
   </header>
   
   <main>
     <section class="profile">
-      <div class="profile__avatar"></div>
+      <div class="profile__avatar" style="background-image: url('./images/avatar.jpg');"></div>
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
-        <button class="profile__edit"></button>
+        <button class="profile__edit" type="button"></button>
         <p class="profile__description">Исследователь океана</p>
       </div>
-      <button class="profile__add"></button>
+      <button class="profile__add" type="button"></button>
     </section>
 
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__close"></button>
-        <form class="popup__edit">
+        <button class="popup__close" type="button"></button>
+        <form class="popup__edit" name="edit-form">
           <h2 class="popup__heading">Редактировать профиль</h2>
-          <input class="popup__input" id="formName" placeholder="" type="text">
-          <input class="popup__input" id="formDescription" placeholder="" type="text">
-          <button class="popup__save" type="button">Сохранить</button>
+          <input class="popup__input popup__input_type_name" placeholder="" type="text" name="name">
+          <input class="popup__input popup__input_type_description" placeholder="" type="text" name="description">
+          <button class="popup__save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
     
     <section class="elements">
-      <div class="elements__card">
-        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус">
-        <p class="elements__caption">Гора Эльбрус</p>
-        <button class="elements__like"></button>
-      </div>
-      <div class="elements__card">
-        <img class="elements__image" src="./images/dombay.jpg" alt="домбай">
-        <p class="elements__caption">Домбай</p>
-        <button class="elements__like"></button>
-      </div>
-      <div class="elements__card">
-        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск">
-        <p class="elements__caption">Карачаевск</p>
-        <button class="elements__like"></button>
-      </div>
-      <div class="elements__card">
-        <img class="elements__image" src="./images/karachaevsk.jpg" alt="карачаевск">
-        <p class="elements__caption">Карачаево-Черкессия</p>
-        <button class="elements__like"></button>
-      </div>
-      <div class="elements__card">
-        <img class="elements__image" src="./images/elbrus.jpg" alt="эльбрус">
-        <p class="elements__caption">Гора Эльбрус</p>
-        <button class="elements__like"></button>
-      </div>
-      <div class="elements__card">
-        <img class="elements__image" src="./images/dombay.jpg" alt="домбай">
-        <p class="elements__caption">Домбай</p>
-        <button class="elements__like"></button>
-      </div>
+      <article class="card">
+        <img class="card__image" src="./images/elbrus.jpg" alt="эльбрус">
+        <div class="card__footer">        
+          <h2 class="card__caption">Гора Эльбрус</h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
+      <article class="card">
+        <img class="card__image" src="./images/dombay.jpg" alt="домбай">
+        <div class="card__footer">
+          <h2 class="card__caption">Домбай</h2>
+          <button class="card__like" type="button"></button>
+        </div>        
+      </article>
+      <article class="card">
+        <img class="card__image" src="./images/karachaevsk.jpg" alt="карачаевск">
+        <div class="card__footer">
+          <h2 class="card__caption">Карачаевск</h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
+      <article class="card">
+        <img class="card__image" src="./images/karachaevsk.jpg" alt="карачаевск">
+        <div class="card__footer">
+          <h2 class="card__caption">Карачаево-Черкессия</h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
+      <article class="card">
+        <img class="card__image" src="./images/elbrus.jpg" alt="эльбрус">
+        <div class="card__footer">
+          <h2 class="card__caption">Гора Эльбрус</h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
+      <article class="card">
+        <img class="card__image" src="./images/dombay.jpg" alt="домбай">
+        <div class="card__footer">
+          <h2 class="card__caption">Домбай</h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
     </section>
   </main>
   
   <footer class="footer">
     <p class="footer__caption">© 2022 Mesto Russia</p>
   </footer>
-  <script src="./js/index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
