небольшие фиксы, чтобы тесты не ругались

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="popup" id="open-card">
       <div class="open-card">
         <button class="popup__close" id="open-card-close" type="button"></button>
-        <img class="open-card__image" src="" alt="">
+        <img class="open-card__image" src="#href" alt="">
         <h2 class="open-card__caption"></h2>
       </div>
     </div>
