--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="popup" id="edit-profile">
       <div class="popup__container">
         <button class="popup__close" id="edit-profile-close" type="button"></button>
-        <form class="popup__form" name="edit-form">
+        <form class="popup__form" id="editProfileForm" name="edit-form">
           <h2 class="popup__heading">Редактировать профиль</h2>
           <input class="popup__input" id="profile-name" placeholder="" type="text" name="name">
           <input class="popup__input" id="profile-description" placeholder="" type="text" name="description">
