--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <form class="popup__form" id="editProfileForm" name="edit-form" novalidate>
           <h2 class="popup__heading">Редактировать профиль</h2>
           <input class="popup__input" id="profile-name" placeholder="" type="text" name="name" required minlength="2" maxlength="40">
-          <span class="popup__error_visible" id="profile-name_error"></span>
+          <span id="profile-name_error"></span>
           <input class="popup__input" id="profile-description" placeholder="" type="text" name="description" required minlength="2" maxlength="200">
-          <span class="popup__error_visible" id="profile-description_error"></span>
+          <span id="profile-description_error"></span>
           <button class="popup__save" id="edit-profie-save" type="submit">Сохранить</button>
         </form>
       </div>
@@ -50,9 +50,9 @@
         <form class="popup__form" id="add-form" name="add-new-card" novalidate>
           <h2 class="popup__heading">Новое место</h2>
           <input class="popup__input" id="addName" placeholder="Название" type="text" name="card-name" required minlength="2" maxlength="30">
-          <span class="popup__error_visible" id="addName_error"></span>
+          <span id="addName_error"></span>
           <input class="popup__input" id="addLink" placeholder="Ссылка на картинку" type="url" name="card-url" required>
-          <span class="popup__error_visible" id="addLink_error"></span>
+          <span id="addLink_error"></span>
           <button class="popup__save popup__save_disabled" id="add-card-save" type="submit" disabled="true">Создать</button>
         </form>
       </div>
