--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <button class="popup__close" id="edit-profile-close" type="button"></button>
         <form class="popup__form" id="editProfileForm" name="edit-form" novalidate>
           <h2 class="popup__heading">Редактировать профиль</h2>
-          <input class="popup__input" id="profile-name" placeholder="Жак-Ив Кусто" type="text" name="name" required minlength="2" maxlength="40">
+          <input class="popup__input" id="profile-name" placeholder="Имя" type="text" name="name" required minlength="2" maxlength="40">
           <span id="profile-name_error"></span>
-          <input class="popup__input" id="profile-description" placeholder="Исследователь океана" type="text" name="description" required minlength="2" maxlength="200">
+          <input class="popup__input" id="profile-description" placeholder="О себе" type="text" name="description" required minlength="2" maxlength="200">
           <span id="profile-description_error"></span>
           <button class="popup__save" id="edit-profie-save" type="submit">Сохранить</button>
         </form>
